# Team-Branzik

./: README.md  run_this.sh
devel/: .catkin  local_setup.fish  local_setup.sh
src/actions_quiz/: CMakeLists.txt  package.xml  server_model.py
src/actions_quiz/action/: droneCommand.action
src/actions_quiz/launch/: drone_action.launch
src/actions_quiz/pkg/: drone_action_client.py  drone_action_server.py
src/services_quiz/launch/: start_client.launch  start_server.launch  start_service.launch
src/services_quiz/src/: square_mover_client.py  square_mover_server.py
src/services_quiz/srv/: MoveInSquare.srv
src/topics_quiz/: package.xml
src/topics_quiz/src/: quiz_publisher.py  quiz_subscriber.py
src/topics_quiz_redare/launch/: topics_quiz.launch
topics_quiz_redare/: CMakeLists.txt  package.xml
topics_quiz_redare/src/: avoid_wall.py
